# HdrSwitcher

./: CMakeLists.txt  HdrSwitcher.cpp  README.md  build.bat  filters.h  util.h
src/: HdrSwitcher.cpp  HdrSwitcher.rc  dbg.h  display.h  filters.h  util.h  version.h  winapi.h
